# python-devcontainer-v2

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  requirements-dev.txt
.devcontainer/: Dockerfile  devcontainer.json  install_pre-commit_hooks.sh  install_python_dependencies.sh  install_zsh_plugins.sh  setup_devcontainer.sh
github_utility/: git-develop-to-main.sh  git-feature-to-develop.sh
tests/: test_hello_world.py
